# code_butler

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  ai-clean.toml  pyproject.toml  requirements.txt  setup.cfg
.codex/: AGENTS.md  auth.json  config.toml  history.jsonl  version.json
.codex/commands/: butler-exec.md  cleanup-advanced.md
.codex/prompts/: butler-exec.md
ai_clean/: __init__.py  cli.py  config.py  factories.py  git.py  git_helpers.py  interfaces.py  metadata.py  models.py  paths.py  plans.py  results.py  storage.py
ai_clean/analyzers/: __init__.py  advanced.py  docstrings.py  duplicate.py  orchestrator.py  organize.py  structure.py
ai_clean/commands/: advanced_cleanup.py  apply.py  ingest.py  plan.py
ai_clean/executors/: __init__.py  backends.py  codex.py  codex_backend.py  factory.py  review.py
ai_clean/interfaces/: __init__.py  codex.py  executor.py  spec_backend.py  types.py
ai_clean/models/: __init__.py  core.py
ai_clean/planners/: __init__.py  advanced.py  concerns.py  docstrings.py  duplicate.py  limits.py  orchestrator.py  organize.py  scope_guard.py  structure.py
docs/: butlerspec_plan.md  executor_manual.md
examples/: interfaces_usage.py  model_roundtrip.py
library_docs/: OpenSpec_README.md  codex-backend.md  codex-slash-command-example.yaml
openspec/: project.md
scripts/: apply_spec_stub.py  apply_spec_wrapper.py
tests/: test_cli_analyze.py  test_cli_annotate.py  test_cli_apply.py  test_cli_apply_manual.py  test_cli_changes_review.py  test_cli_clean.py  test_cli_cleanup_advanced.py  test_cli_ingest.py  test_cli_organize.py  test_cli_plan.py  test_codex_executor.py  test_codex_review_executor.py  test_commands_apply.py  test_config_loader.py  test_executor_factories.py  test_factories.py  test_git.py  test_git_helpers.py  test_plan_storage.py  test_planner_orchestrator.py  test_plans.py  test_results.py
thirdparty_learning/: openspec_tree.txt
(+440 files in other folders)
