[metadata]
name = ai-clean
version = 0.1.0
description = CLI for analyzing, planning, and applying structured code cleanups.
long_description = file: README.md
long_description_content_type = text/markdown
author = AI Clean Maintainers
python_requires = >=3.9

[options]
packages = find:
install_requires =

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    ai-clean = ai_clean.cli:main
